Added tests for mat mult func

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -15,8 +15,9 @@ add_dependencies(example glfw nanovg ${COPY_BINARY})
 # Build tests
 add_executable(tests
   glew.c
-  tests.cpp
   vec2.cpp
+  mat2.cpp
+  tests.cpp
   )
 target_link_libraries(tests
   glfw
