Fixed linking issues

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,6 +3,10 @@ add_executable(example
   window.cpp
   glew.c
   example.cpp
+  vec2.cpp
+  mat2.cpp
+  rect.cpp
+  circle.cpp
   )
 target_link_libraries(example
   glfw
@@ -18,6 +22,9 @@ add_executable(tests
   vec2.cpp
   mat2.cpp
   tests.cpp
+  rect.cpp
+  circle.cpp
+  window.cpp
   )
 target_link_libraries(tests
   glfw
